[package]
name = "danmakuhub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
env_logger = "0.10.0"
md5 = "0.7.0"
mimalloc = { version = "0.1.37", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlite = "0.31.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace", "cors"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
