[package]
name = "danmakuhub"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.8.1"
env_logger = "0.11.6"
md5 = "0.7.0"
mimalloc = { version = "0.1.43", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.36.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
